--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,51 @@
-plugins {
-    id 'java'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-//    id 'org.springframework.boot' version '2.5.4'
-//    id 'org.springframework.experimental.aot' version '0.10.3'
-    id 'org.springframework.boot' version '2.7.7'
-    id 'org.springframework.experimental.aot' version '0.12.2'
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url = uri("https://repo.spring.io/release") }
+    }
+
+    // springboot 与 native 版本对应关系 https://release.blog.csdn.net/article/details/125255826
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.5.4")
+        classpath("org.springframework.experimental.aot:org.springframework.experimental.aot.gradle.plugin:0.10.3")
+    }
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
     maven { url = uri("https://repo.spring.io/release") }
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+subprojects{
+    apply plugin:'java-library'
+    apply plugin:'io.spring.dependency-management'
+    apply plugin:'org.springframework.boot'
+    apply plugin:'org.springframework.experimental.aot'
+
+    sourceCompatibility = '11'
+
+    repositories {
+        mavenCentral()
+        maven { url = uri("https://repo.spring.io/release") }
+    }
+
+    jar { enabled = true }
+    bootJar { enabled = true }
+
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+
+
+    bootBuildImage {
+        builder = "paketobuildpacks/builder:tiny"
+        environment = [
+                "BP_NATIVE_IMAGE" : "true"
+        ]
+    }
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-bootBuildImage {
-    builder = "paketobuildpacks/builder:tiny"
-    environment = [
-            "BP_NATIVE_IMAGE" : "true"
-    ]
-}
